src/snapshots/threema_gateway_bot__commands__tests__help_text__with_custom_commands.snap
---
source: src/commands.rs
expression: r.help_text()
---
Available Commands:

/help - Show this help message
/remind - Set a reminder
/list - List your reminders
