src/snapshots/threema_gateway_bot__commands__tests__help_text__with_description.snap
---
source: src/commands.rs
expression: r.help_text()
---
My cool bot.

Available Commands:

/help - Show this help message
