src/snapshots/threema_gateway_bot__commands__tests__help_text__with_prelude.snap
---
source: src/commands.rs
expression: "r.help_text_with_prelude(Some(\"Unknown command: /foo\"))"
---
Unknown command: /foo

---

Available Commands:

/help - Show this help message
